--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "react-scripts start"
+    "dev": "react-scripts start",
+    "lint": "eslint src/**/*.{js,jsx}"
   },
   "proxy": "http://localhost:5000",
   "eslintConfig": {
@@ -45,8 +46,17 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.1",
     "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
+    "eslint-plugin-react": "^7.35.2",
+    "globals": "^15.9.0",
     "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.10",
+  "@babel/plugin-proposal-private-property-in-object": "^7.19.1"
+
   }
 }
